field-content uses inline-box instead of inline table to avoid wrapping to next line

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -2101,7 +2101,8 @@ div.field-title {
 }
 
 div.field-content {
-  display:inline-table;
+  /* display:inline-table; */
+  display: inline-block;
   float:none;
   width: calc(100% - 11em);
 }
